<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"></string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="nav_favorites">我的收藏</string>
    <string name="nav_following">关注的人</string>
    <string name="nav_histories">历史记录</string>
    <string name="nav_home">主页</string>
    <string name="nav_login_click_avatar">点击头像登录</string>
    <string name="nav_notifications">我的消息</string>
    <string name="nav_write">写博客</string>
    <string name="nav_write_posting">发布动态</string>
    <!--    <string name="nav_offline_manager" translatable="false">离线缓存</string>-->
    <string name="nav_draft">草稿箱</string>
    <string name="nav_settings">设置与帮助</string>
    <string name="nav_exit">退出登录</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>